--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,37 @@
-.App {
-  text-align: center;
-}
 
 ul {
   list-style-type: none;
+  border: 1px solid rgb(202, 202, 202);
+  border-radius: 10px;
+  height: 600px;
+  margin: 5% 20%;
+  overflow: auto;
+  background-color: #fff;
+  padding: 0;
 }
+.student-container {
+  border-bottom: 1px solid rgb(202, 202, 202, 0.4);
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+h1 {
+  margin: 5px 0 0 0;
+  font-size: 2rem;
+}
+img {
+  width: 150px;
+  height: 150px;
+  border: 1px solid rgb(202, 202, 202);
+  border-radius: 50%;
+  margin: 20px;
+}
+p {
+  color: gray;
+}
+.student-info {
+  padding-left: 30px;
+}
+
 
