--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 
-ul {
+.list-container {
   list-style-type: none;
   border: 1px solid rgb(202, 202, 202);
   border-radius: 10px;
@@ -14,7 +14,8 @@ ul {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
+  position: relative;
 }
 h1 {
   margin: 5px 0 0 0;
@@ -26,6 +27,9 @@ img {
   border: 1px solid rgb(202, 202, 202);
   border-radius: 50%;
   margin: 20px;
+  /* position: absolute;
+  top: 0;
+  left: 0; */
 }
 p {
   color: gray;
@@ -41,6 +45,23 @@ p {
   border: none;
   border-bottom: 1px solid rgb(202, 202, 202)
 
+}
+.grades-list {
+  list-style-type: none;
+  padding-left: 0;
+  padding-bottom: 5px;
+  color: gray;
+
+}
+
+.expand-btn {
+  border: none;
+  background-color: #fff;
+  font-size: 3rem;
+  color: #9a9a9a;
+  position: absolute;
+  top: 0;
+  right: 5px;
 }
 
 
